--- a/styles/style.css
+++ b/styles/style.css
@@ -4,21 +4,46 @@
     box-sizing: border-box;
     font-family: 'KoHo', sans-serif;
 }
+
 body,html{
     width: 100%;
-    height: 100vh;
+    height: 400vh;
 }
 ::selection{
     background-color: #add8e6;
 }
+
 html{
     scroll-behavior:smooth;
 }
+
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #8778f5;
+    box-shadow: inset 0 0 5px rgb(236, 234, 234); 
+    border-radius: 10px;
+}
+  /* Handle */
+::-webkit-scrollbar-thumb {
+    background-color: #FFF; 
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #add; 
+}
+
 body{
     background-image: url(../images/squares.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    background-position-x: right;
+    background-position-y: left;
+
 }
 .header{
     display: flex;
@@ -33,6 +58,7 @@ body{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 40px;
 }
 .header-content h1{
     color: #FFF;
@@ -48,12 +74,17 @@ body{
 .header-content ul li a{
     text-decoration: none;
     color: #FFF;
+    font-size: 18px;
+    font-weight: bold;
 }
 .animated-text{
-    animation:rotate 1000ms infinite linear;
+    animation:rotate 2000ms infinite alternate;
 }
 @keyframes rotate {
     0%{
-        transform: tr;
+        transform: rotate(10deg);
+    }
+    100%{
+        transform: rotate(-10deg);
     }
 }
