--- a/styles/style.css
+++ b/styles/style.css
@@ -41,9 +41,6 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    background-position-x: right;
-    background-position-y: left;
-
 }
 .header{
     display: flex;
@@ -101,10 +98,10 @@ body{
 }
 @keyframes title-rotate {
     0%{
-        transform: translateY(10%);
+        transform: rotate(10deg);
     }
     100%{
-        transform: translateY(-10%);
+        transform: rotate(-10deg);
     }
 }
 .main-content h2{
@@ -123,14 +120,48 @@ body{
     width: auto;
     color:#FFF;
 }
-
+.menu{
+    display: none;
+}
 /* ! mobile design */
-
-@media screen and (max-width:411px) {
-    .header-content h1{
+@media screen and (max-width:768px){
+    body,html{
+        width: 100%;
+        height: 100vh;
+    }
+    body{
+        background-attachment: fixed;
+    }
+    .main-content h2{
         display: none;
+    }
+    .menu{
+        display: block;
+        margin: 20px 0px;
     }
     .header-content{
+        padding: 20px;
+    }
+    .header-content h1{
+        font-size: 25px;
+    }
+    .header-content ul{
         display: none;
     }
+    .header-content h1{
+        animation: title-rotate 300ms infinite alternate;
+    }
+}
+@media screen and (max-width:411px) {
+    
+}
+.menu div{
+    background-color: #FFF;
+    width: 50px;
+    height: 3px;
+    margin: 5px;
+    padding: 1px;
+}
+.menu:hover{
+    cursor: pointer;
 }
