--- a/styles/style.css
+++ b/styles/style.css
@@ -62,7 +62,7 @@ body{
     font-size: 40px;
 }
 .header-content h1:hover{
-    animation: title-rotate 300ms infinite alternate;
+    animation: title-rotate 300ms infinite linear;
     cursor: pointer;
 }
 
@@ -98,10 +98,10 @@ body{
 }
 @keyframes title-rotate {
     0%{
-        transform: rotate(10deg);
+        transform: translateX(10%);
     }
     100%{
-        transform: rotate(-10deg);
+        transform: translateX(-10%);
     }
 }
 .main-content h2{
@@ -124,9 +124,11 @@ body{
     display: none;
 }
 
-.login-button{
+.login-button {
     background-color: lightblue;
-    padding: 10px;
+    padding: 8px;
+    border-radius: 10px;
+    text-transform: uppercase;
 }
 /* mobile design */ 
 
@@ -153,16 +155,23 @@ body{
         margin: 20px 0px;
     }
     .header-content{
-        padding: 20px;
+        display: flex;
+        flex: 1;
+        align-items: center;
+        justify-content: space-around;
+        width: 100%;
+        height: 100px;
+        padding: 10px;
+        background-color: rgb(48, 47, 47);
     }
     .header-content h1{
-        font-size: 25px;
+        font-size: 30px;
     }
     .header-content ul{
         display: none;
     }
     .header-content h1{
-        animation: title-rotate 400ms infinite alternate;
+        animation: title-rotate 1000ms normal;
     }
 }
 @media screen and (max-width:411px) {
@@ -171,7 +180,7 @@ body{
 .menu div{
     background-color: #FFF;
     width: 40px;
-    height: 3px;
+    height: 2px;
     margin: 5px;
     padding: 1px;
 }
