--- a/styles/style.css
+++ b/styles/style.css
@@ -171,7 +171,7 @@ body{
         display: none;
     }
     .header-content h1{
-        animation: title-rotate 1000ms normal;
+        animation: title-rotate 1000ms infinite alternate;
     }
 }
 @media screen and (max-width:411px) {
