--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
 
 body,html{
     width: 100%;
-    height: 400vh;
+    height: 100vh;
 }
 ::selection{
     background-color: #add8e6;
@@ -37,7 +37,8 @@ html{
 }
 
 body{
-    background-image: url(../images/squares.png);
+    /*background-image: url(../images/squares.png);*/
+    background-color: #121212;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -131,20 +132,28 @@ body{
     text-transform: uppercase;
 }
 /* mobile design */ 
-
+.container p{
+    text-align: center;
+}
 @media screen and (max-width:768px){
+    *{
+        font-family: 'Poppins', sans-serif
+    }
     .container p{
         font-size: 20px;
-        text-align: left;
+        text-align: center;
         height: auto;
         width: auto;
+    }
+    .container span{
+        font-weight: bold;
     }
     body,html{
         width: 100%;
         height: 100vh;
     }
     body{
-        background-color: #8778f5;
+        background-color: #121212;
         background-image: none;
     }
     .main-content h2{
@@ -162,10 +171,10 @@ body{
         width: 100%;
         height: 100px;
         padding: 10px;
-        background-color: rgb(48, 47, 47);
+        background-color:#8778f5;
     }
     .header-content h1{
-        font-size: 30px;
+        font-size: 23px;
     }
     .header-content ul{
         display: none;
@@ -179,7 +188,7 @@ body{
 }
 .menu div{
     background-color: #FFF;
-    width: 40px;
+    width: 30px;
     height: 2px;
     margin: 5px;
     padding: 1px;
@@ -196,7 +205,6 @@ body{
     height: auto;
 }
 #random-button{
-    display: flex;
     padding: 10px;
     border-radius: 20px;
     background-color:rgb(48, 47, 47);
@@ -205,14 +213,18 @@ body{
     outline: none;
     font-size: 20px;
     cursor: pointer;
+    font-weight: bold;
+    width: auto;
+    height: auto;
 }
 #random-number{
-    font-size: 18px;
+    font-size: 16px;
     background-color: rgb(48, 47, 47);
-    padding: 10px;
+    padding: 8px;
     margin: 10px;
     color: #FFF;
     width: auto;
     text-align: center;
     border-radius: 20px;
+    height: auto;
 }
