--- a/styles/style.css
+++ b/styles/style.css
@@ -56,17 +56,19 @@ body{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 40px;
+    padding: 30px;
+    background-color:#8778f5;
 }
+
 .header-content h1{
     color: #FFF;
     font-size: 40px;
 }
 .header-content h1:hover{
     animation: title-rotate 500ms infinite alternate;
+    transition: 0.5s ease-in-out;
     cursor: pointer;
 }
-
 
 .header-content ul{
     list-style-type: none;
@@ -106,6 +108,7 @@ body{
     }
 }
 .main-content h2{
+    margin: 30px;
     color: #FFF;
     font-size: 60px;
     text-align: center;
@@ -126,15 +129,20 @@ body{
 }
 
 .login-button {
-    background-color: lightblue;
-    padding: 8px;
-    border-radius: 10px;
-    text-transform: uppercase;
+    height: auto;
+    padding: 10px;
+    border-radius: 20px;
+    background-color: rgb(48, 47, 47);
+    width: auto;
+    height: auto;
 }
-/* mobile design */ 
+
 .container p{
     text-align: center;
 }
+
+/* TODO Mobile Design */
+
 @media screen and (max-width:768px){
     *{
         font-family: 'Poppins', sans-serif
@@ -145,9 +153,7 @@ body{
         height: auto;
         width: auto;
     }
-    .container span{
-        font-weight: bold;
-    }
+
     body,html{
         width: 100%;
         height: 100vh;
@@ -181,11 +187,101 @@ body{
     }
     .header-content h1{
         animation: title-rotate 1000ms infinite alternate;
+        transition: 1s ease;
     }
 }
-@media screen and (max-width:411px) {
-    
+
+/* TODO Tablet Design */
+
+@media screen and (max-width:1027px) {
+    .header-content{
+        display: flex;
+        flex: 1;
+        width: 100%;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .header-content h1{
+        font-size: 25px;
+    }
+    .list{
+        display:inline-block;
+        width:auto;
+    }
+    .login-button{
+        font-size: 10px;
+    }
+    .header-content ul li a{
+        text-decoration: none;
+        color: #FFF;
+        font-size: 18px;
+        font-weight: bold;
+    }
+    .login-button-1{
+        font-size: 10px;
+        width:auto;
+    }
 }
+/* ! Tablet */
+@media screen and (max-width:931px){
+    .header-content{
+        display: flex;
+        flex: 1;
+        width: 100%;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .header-content h1{
+        font-size: 20px;
+    }
+    .list{
+        display:inline-block;
+        width:auto;
+    }
+    .login-button{
+        font-size: 10px;
+    }
+    .header-content ul li a{
+        text-decoration: none;
+        color: #FFF;
+        font-size: 18px;
+        font-weight: bold;
+    }
+    .login-button-1{
+        font-size: 10px;
+        width:auto;
+    }
+}
+@media screen and (max-width:845px){
+    .header-content{
+        display: flex;
+        flex: 1;
+        width: 100%;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .header-content h1{
+        font-size: 20px;
+    }
+    .list{
+        display:inline-block;
+        width:auto;
+    }
+    .login-button{
+        font-size: 10px;
+    }
+    .header-content ul li a{
+        text-decoration: none;
+        color: #FFF;
+        font-size: 14px;
+        font-weight: bold;
+    }
+    .login-button-1{
+        font-size: 10px;
+        width:auto;
+    }
+}
+
 .menu div{
     background-color: #FFF;
     width: 30px;
