--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,7 @@ body{
 }
 .header-content{
     width: 100%;
-    height: auto;
+    height: 12vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -85,12 +85,16 @@ body{
 }
 .header-content ul li a:hover{
     text-decoration: underline;
-    color: rgb(223, 222, 222);
+    color: rgb(229, 226, 226);
     transition: 0.5s ease-in-out;
 }
+
 .animated-text{
     animation:rotate 1000ms infinite alternate;
 }
+
+/* Animations */
+
 @keyframes rotate {
     0%{
         transform: rotate(10deg);
@@ -99,6 +103,7 @@ body{
         transform: rotate(-10deg);
     }
 }
+
 @keyframes title-rotate {
     0%{
         transform: translateX(10%);
@@ -107,6 +112,7 @@ body{
         transform: translateX(-10%);
     }
 }
+
 .main-content h2{
     margin: 30px;
     color: #FFF;
@@ -124,6 +130,7 @@ body{
     width: auto;
     color:#FFF;
 }
+
 .menu{
     display: none;
 }
@@ -154,10 +161,6 @@ body{
         width: auto;
     }
 
-    body,html{
-        width: 100%;
-        height: 100vh;
-    }
     body{
         background-color: #121212;
         background-image: none;
@@ -167,30 +170,36 @@ body{
     }
     .menu{
         display: block;
-        margin: 20px 0px;
+        margin: 10px 0px;
     }
-    .header-content{
+    body{
+        overflow-x: hidden;
+    }
+    .header-content .list{
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        background-color: #8778f5;
         display: flex;
-        flex: 1;
+        flex-direction: column;
         align-items: center;
-        justify-content: space-around;
-        width: 100%;
-        height: 100px;
-        padding: 10px;
-        background-color:#8778f5;
+        width: 50%;
+        transform: translateX(100%);
+        transition: 0.5s ease-in;
     }
-    .header-content h1{
-        font-size: 23px;
-    }
-    .header-content ul{
-        display: none;
+    .login-button{
+        background-color: rgb(68, 68, 68);
     }
     .header-content h1{
         animation: title-rotate 1000ms infinite alternate;
         transition: 1s ease;
+        font-size: 23px;
     }
 }
-
+.list-active{
+    transform: translateX(0%);
+}
 /* TODO Tablet Design */
 
 @media screen and (max-width:1027px) {
@@ -284,10 +293,9 @@ body{
 
 .menu div{
     background-color: #FFF;
-    width: 30px;
-    height: 2px;
+    width: 40px;
+    height: 4px;
     margin: 5px;
-    padding: 1px;
 }
 .menu:hover{
     cursor: pointer;
