--- a/Login/styles/style.css
+++ b/Login/styles/style.css
@@ -2,9 +2,133 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-body,html{
+html{
+    scroll-behavior: smooth;
+}
+::selection{
+    background-color: #add8e6;
+}
+body{
+    background-color: #121212;
+}
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #8778f5;
+    box-shadow: inset 0 0 5px rgb(236, 234, 234); 
+    border-radius: 10px;
+}
+  /* Handle */
+::-webkit-scrollbar-thumb {
+    background-color: #FFF; 
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(238, 243, 248); 
+}
+
+nav{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     width: 100%;
-    height: 100vh;
+    height: 8vh;
+    background-color: #8778f5;
+    padding: 40px 0px;
+}
+nav h2{
+    color: #FFF;
+    letter-spacing: 5px;
+}
+.nav-links{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 30%;
+}
+.nav-links li a{
+    text-decoration: none;
+    color: #FFF;
+    letter-spacing: 4px;
+    font-weight: bold;
+    font-size: 16px;
+}
+.nav-links li{
+    color: rgb(218, 218, 218);
+    padding: 20px;
+    list-style-type: none;
+}
+.burger{
+    display: none;
+}
+.burger:hover{
+    cursor: pointer;
+}
+.burger div{
+    background-color: #FFF;
+    width: 25px;
+    height: 3px;
+    margin: 5px;
+    transition: all 0.3s ease;
+}
+
+/* Responsive Design starts here*/
+
+@media screen and (max-width:768px){
+    body{
+        overflow-x: hidden;
+    }
+    .burger {
+        display:block;
+    }
+    .nav-links{
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 9vh;
+        background-color: #8778f5;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-evenly;
+        width: 45%;
+        transform: translateX(100%);
+        transition: 0.3s ease-out;
+    }
+}
+
+/* aimation */
+
+.nav-active{
+    transform: translateX(0%);
+}
+/* Nav Fade animation */
+
+@keyframes navLinkFade{
+    from{
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+/* burger animation*/
+
+.toggle .row-1{
+    transform: rotate(-45deg) translate(-5px,6px);
+}
+.toggle .row-2{
+    opacity: 0;
+}
+.toggle .row-3{
+    transform: rotate(45deg) translate(-5px,-6px);
 }
