--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@ body,html{
     width: 100%;
     height: 100vh;
 }
+
 ::selection{
     background-color: #add8e6;
 }
@@ -43,6 +44,7 @@ body{
     background-size: cover;
     background-attachment: fixed;
 }
+
 .header{
     display: flex;
     justify-content: space-around;
@@ -50,9 +52,10 @@ body{
     width: 100%;
     height: auto;
 }
+
 .header-content{
     width: 100%;
-    height: 12vh;
+    height: 18vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -64,6 +67,7 @@ body{
     color: #FFF;
     font-size: 40px;
 }
+
 .header-content h1:hover{
     animation: title-rotate 500ms infinite alternate;
     transition: 0.5s ease-in-out;
@@ -73,16 +77,21 @@ body{
 .header-content ul{
     list-style-type: none;
 }
-.header-content ul li{
-    display: inline-block;
-    padding: 20px;
+
+.list {
+    display:flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 60%;
 }
+
 .header-content ul li a{
     text-decoration: none;
     color: #FFF;
     font-size: 18px;
     font-weight: bold;
 }
+
 .header-content ul li a:hover{
     text-decoration: underline;
     color: rgb(229, 226, 226);
@@ -119,6 +128,7 @@ body{
     font-size: 60px;
     text-align: center;
 }
+
 .container p{
     padding: 5px;
     margin: 10px;
@@ -137,9 +147,9 @@ body{
 
 .login-button {
     height: auto;
-    padding: 10px;
+    padding: 8px;
     border-radius: 20px;
-    background-color: rgb(48, 47, 47);
+    border: 2px solid #FFF;
     width: auto;
     height: auto;
 }
@@ -148,7 +158,7 @@ body{
     text-align: center;
 }
 
-/* TODO Mobile Design */
+/*  Mobile Design */
 
 @media screen and (max-width:768px){
     *{
@@ -175,21 +185,21 @@ body{
     body{
         overflow-x: hidden;
     }
-    .header-content .list{
+    .list{
         position: absolute;
         right: 0px;
         height: 92vh;
-        top: 8vh;
+        top: 12vh;
         background-color: #8778f5;
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 50%;
+        width: 40%;
         transform: translateX(100%);
         transition: 0.5s ease-in;
     }
     .login-button{
-        background-color: rgb(68, 68, 68);
+        background-color: transparent;
     }
     .header-content h1{
         animation: title-rotate 1000ms infinite alternate;
@@ -200,7 +210,8 @@ body{
 .list-active{
     transform: translateX(0%);
 }
-/* TODO Tablet Design */
+
+/*  Tablet Design */
 
 @media screen and (max-width:1027px) {
     .header-content{
@@ -213,10 +224,6 @@ body{
     .header-content h1{
         font-size: 25px;
     }
-    .list{
-        display:inline-block;
-        width:auto;
-    }
     .login-button{
         font-size: 10px;
     }
@@ -231,6 +238,7 @@ body{
         width:auto;
     }
 }
+
 /* ! Tablet */
 @media screen and (max-width:931px){
     .header-content{
@@ -243,10 +251,6 @@ body{
     .header-content h1{
         font-size: 20px;
     }
-    .list{
-        display:inline-block;
-        width:auto;
-    }
     .login-button{
         font-size: 10px;
     }
@@ -261,6 +265,7 @@ body{
         width:auto;
     }
 }
+
 @media screen and (max-width:845px){
     .header-content{
         display: flex;
@@ -272,10 +277,7 @@ body{
     .header-content h1{
         font-size: 20px;
     }
-    .list{
-        display:inline-block;
-        width:auto;
-    }
+
     .login-button{
         font-size: 10px;
     }
@@ -297,9 +299,11 @@ body{
     height: 4px;
     margin: 5px;
 }
+
 .menu:hover{
     cursor: pointer;
 }
+
 .random{
     display: flex;
     flex-direction: column;
@@ -308,6 +312,7 @@ body{
     width: 100%;
     height: auto;
 }
+
 #random-button{
     padding: 10px;
     border-radius: 20px;
@@ -321,6 +326,7 @@ body{
     width: auto;
     height: auto;
 }
+
 #random-number{
     font-size: 16px;
     background-color: rgb(48, 47, 47);
