--- a/styles/style.css
+++ b/styles/style.css
@@ -148,7 +148,7 @@ body{
 .login-button {
     height: auto;
     padding: 8px;
-    border-radius: 20px;
+    border-radius: 20px 4px;
     border: 2px solid #FFF;
     width: auto;
     height: auto;
