--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@ html{
 
 body{
     /*background-image: url(../images/squares.png);*/
-    background-color: red;
+    background-color: #121212;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -50,7 +50,7 @@ body{
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 12vh;
+    height: auto;
 }
 
 .header-content{
